# image-space-refractions

./: .gitignore  CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/include/framework/: mesh.h  trackball.h  window.h
framework/src/: shader.cpp  trackball.cpp  window.cpp
shaders/: blinn_phong_frag.glsl  debug.frag  deferred.vert  environment_map.frag  environment_map.vert  lambert_frag.glsl  phong_frag.glsl  refract-render.frag  refract-render.vert  screen-quad.frag  shader_frag.glsl  toon_diffuse_frag.glsl  toon_specular_frag.glsl  write-depth.frag  write-geometric.frag  write-normal.frag  xtoon_frag.glsl
src/: CMakeLists.txt  main.cpp  texture.cpp  texture.h
src/ray_tracing/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  common.h  interpolate.cpp  interpolate.h  intersect.cpp  intersect.h
src/render/: environment_map.cpp  environment_map.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  refraction.cpp  refraction.h
src/ui/: menu.cpp  menu.h
src/utils/: config.h  constants.h  numerical_utils.cpp  numerical_utils.h  numerical_utils.hpp  render_utils.hpp
